Remove unwanted borders and gaps to ensure full page coverage on all devices
Adjusts layout and CSS to eliminate white/black borders using w-screen/h-screen and overflow-x: hidden.

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -65,15 +65,23 @@
   html {
     margin: 0;
     padding: 0;
-    width: 100%;
-    min-height: 100vh;
+    width: 100vw;
+    height: 100vh;
+    overflow-x: hidden;
     background-color: hsl(var(--background));
   }
 
   #root {
-    width: 100%;
-    min-height: 100vh;
+    width: 100vw;
+    height: 100vh;
+    margin: 0;
+    padding: 0;
     background-color: hsl(var(--background));
+    overflow-x: hidden;
+  }
+
+  * {
+    box-sizing: border-box;
   }
 
   h1, h2, h3, h4, h5, h6 {
